--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hiszpania-blog",
+  "name": "chorwacja-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,5 +21,9 @@
     "eslint-config-next": "14.2.1",
     "react-router-dom": "^6.23.0",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
